--- a/MyReactionSearch/app/build.gradle
+++ b/MyReactionSearch/app/build.gradle
@@ -39,6 +39,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "androidx.activity:activity-ktx:1.1.0" //by viewModels()
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0" //lifecycleScope
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0" //asLiveData
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
