--- a/MyCustomLint/lint/build.gradle
+++ b/MyCustomLint/lint/build.gradle
@@ -9,9 +9,11 @@ java {
 }
 
 ext {
-    lintVersion = "27.1.2"
+    lintVersion = "27.2.0"
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly "com.android.tools.lint:lint-api:$lintVersion"
+    compileOnly "com.android.tools.lint:lint-checks:$lintVersion"
 }
