Register the registry

--- a/MyCustomLint/lint/build.gradle
+++ b/MyCustomLint/lint/build.gradle
@@ -17,3 +17,9 @@ dependencies {
     compileOnly "com.android.tools.lint:lint-api:$lintVersion"
     compileOnly "com.android.tools.lint:lint-checks:$lintVersion"
 }
+
+jar {
+    manifest {
+        attributes("Lint-Registry-v2": "io.github.erikrios.lint.MyIssueRegistry")
+    }
+}
