--- a/TourismAppWithUsefulLibraries/shared_dependencies.gradle
+++ b/TourismAppWithUsefulLibraries/shared_dependencies.gradle
@@ -12,9 +12,11 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "com.google.android.material:material:$material_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
-
+    implementation "com.facebook.shimmer:shimmer:$shimmer_version"
+    
     //koin
     implementation "org.koin:koin-core:$koin_version"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
+
 }
